force-app/test/default/objects/Test_Object__c/Test_Object__c.object-meta.xml
<CustomObject>
    <description>added from sfdx plugin</description>
    <label>Test Object</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>