force-app/test/default/objects/Test_Object__c/fields/Number_18_0__c.field-meta.xml
<CustomField>
    <fullName>Number_18_0__c</fullName>
    <label>Number 18 0</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>